--- a/style.scss
+++ b/style.scss
@@ -2,13 +2,14 @@ $color_1: black;
 $color_2: white;
 $color_3: rgb(252, 250, 250);
 $color_4: #036aaf;
-$font_family_1: "Nunito Sans", sans-serif;
+$font_family_1: "Nunito Sans",
+sans-serif;
 $background_color_1: black;
 $background_color_2: rgb(0, 0, 0);
 $background_color_3: #3da6c6;
 
 @mixin nv-btn_child {
-    margin-top: 4px;
+	margin-top: 4px;
 	opacity: 1;
 }
 
@@ -18,171 +19,200 @@ body {
 	padding: 0;
 	font-family: $font_family_1;
 
-#container {
-	display: flex;
-	justify-content: space-around;
-	align-items: center;
-}
-.logo_nav {
-    cursor: pointer;
-}
-.nav_nav {
-	li {
-		list-style: none;
-		display: inline-block;
-		padding: 0 20px;
-		a {
-			color: $color_1;
-			text-decoration: none;
-		}
+	#container {
+		display: flex;
+		justify-content: space-around;
+		align-items: center;
 	}
-}
 
-.button_nav {
-	background-color: $background_color_1;
-	border-radius: 6px;
-	padding: 5px 15px;
-	a {
-		text-decoration: none;
-		color: $color_2;
+	.logo_nav {
+		cursor: pointer;
 	}
-}
 
-#header {
-	display: grid;
-	grid-template-columns: 50% auto;
-}
-.content_header {
-	margin-left: 50px;
-	h1 {
-		font-size: 40px;
-		opacity: 0.7;
-	}
-	a {
-		color: $color_2;
-		text-decoration: none;
-		padding: 10px 45px;
-		border-radius: 8px;
-		background-image: linear-gradient(to right,#5555a5, #5165b2, #3ea3c5, #3da6c6 );
-		position: relative;
-		top: 30px;
-	}
-}
-p {
-	opacity: 0.7;
-}
-.vid_header {
-	float: right;
-	background-image: linear-gradient(140deg, #4c6d7de0, #5a576fbb);
-	height: 450px;
-	position: relative;
-	overflow: hidden;
-	video {
-		height: 450px;
-		float: right;
-		z-index: -1;
-		position: absolute;
-	}
-	p {
-		text-align: center;
-		color: $color_2;
-		position: absolute;
-		top: 340px;
-		right: 120px;
-	}
-}
-input {
-	visibility: hidden;
-}
-#nav {
-	&:checked {
-		&+.nav-btn {
-			i {
-				&:nth-child(1) {
-					transform: translateY(6px) rotate(180deg);
-				}
-				&:nth-child(3) {
-					transform: translateY(-6px) rotate(90deg);
-				}
+	.nav_nav {
+		li {
+			list-style: none;
+			display: inline-block;
+			padding: 0 20px;
+
+			a {
+				color: $color_1;
+				text-decoration: none;
 			}
 		}
-		&~.nav_nav {
-			z-index: 1;
-			opacity: 1;
+	}
+
+	.button_nav {
+		background-color: $background_color_1;
+		border-radius: 6px;
+		padding: 5px 15px;
+
+		a {
+			text-decoration: none;
+			color: $color_2;
 		}
 	}
-}
-@media screen and (max-width: 900px) {
-	.nav_nav {
-		position: fixed;
-		top: 60px;
-		width: 80%;
-		height: 30%;
-		opacity: 0;
-		background-color: $background_color_2;
-		border-radius: 10px;
-		padding: 20px;
-		box-shadow: 10px 10px 30px black;
-		ul {
-			li {
-				a {
-					margin-left: 30px;
-					color: $color_3;
-					line-height: 35px;
-					font-size: 22px;
-					font-weight: bold;
-					&:hover {
-						color: $color_4;
-						background-color: $background_color_3;
-						z-index: 1;
-						border-radius: 5px;
+
+	#header {
+		display: grid;
+		grid-template-columns: 50% auto;
+	}
+
+	.content_header {
+		margin-left: 50px;
+
+		h1 {
+			font-size: 40px;
+			opacity: 0.7;
+		}
+
+		a {
+			color: $color_2;
+			text-decoration: none;
+			padding: 10px 45px;
+			border-radius: 8px;
+			background-image: linear-gradient(to right, #5555a5, #5165b2, #3ea3c5, #3da6c6);
+			position: relative;
+			top: 30px;
+		}
+	}
+
+	p {
+		opacity: 0.7;
+	}
+
+	.vid_header {
+		float: right;
+		background-image: linear-gradient(140deg, #4c6d7de0, #5a576fbb);
+		height: 450px;
+		position: relative;
+		overflow: hidden;
+
+		video {
+			height: 450px;
+			float: right;
+			z-index: -1;
+			position: absolute;
+		}
+
+		p {
+			text-align: center;
+			color: $color_2;
+			position: absolute;
+			top: 340px;
+			right: 120px;
+		}
+	}
+
+	input {
+		visibility: hidden;
+	}
+
+	#nav {
+		&:checked {
+			&+.nav-btn {
+				i {
+					&:nth-child(1) {
+						transform: translateY(6px) rotate(180deg);
+					}
+
+					&:nth-child(3) {
+						transform: translateY(-6px) rotate(90deg);
+					}
+				}
+			}
+
+			&~.nav_nav {
+				z-index: 1;
+				opacity: 1;
+			}
+		}
+	}
+
+	@media screen and (max-width: 900px) {
+		.nav_nav {
+			position: fixed;
+			top: 60px;
+			width: 80%;
+			height: 30%;
+			opacity: 0;
+			background-color: $background_color_2;
+			border-radius: 10px;
+			padding: 20px;
+			box-shadow: 10px 10px 30px black;
+
+			ul {
+				li {
+					a {
+						margin-left: 30px;
+						color: $color_3;
+						line-height: 35px;
+						font-size: 22px;
+						font-weight: bold;
+
+						&:hover {
+							color: $color_4;
+							background-color: $background_color_3;
+							z-index: 1;
+							border-radius: 5px;
+						}
 					}
 				}
 			}
 		}
-	}
-	.nav-btn {
-		position: fixed;
-		right: 10px;
-		top: 10px;
-		cursor: pointer;
-		width: 48px;
-		height: 48px;
-		i {
-			display: block;
-			width: 20px;
-			height: 2px;
-			background: #262626;
-			border-radius: 2px;
-			margin-left: 14px;
-			&:nth-child(1), &:nth-child(2), &:nth-child(3) {
-                @include nv-btn_child;
-            }
+
+		.nav-btn {
+			position: fixed;
+			right: 10px;
+			top: 10px;
+			cursor: pointer;
+			width: 48px;
+			height: 48px;
+
+			i {
+				display: block;
+				width: 20px;
+				height: 2px;
+				background: #262626;
+				border-radius: 2px;
+				margin-left: 14px;
+
+				&:nth-child(1),
+				&:nth-child(2),
+				&:nth-child(3) {
+					@include nv-btn_child;
+				}
+			}
 		}
 	}
-}
-@media only screen and (max-width: 900px) {
-	#container {
-		display: flex;
-        flex-direction: column;
-	}
-	.button_nav {
-		visibility: hidden;
-	}
-	#header {
-		display: flex;
-        flex-direction: column;
-	}
-	.vid_header {
-		background-image: none;
-		video {
-			width: 100%;
+
+	@media only screen and (max-width: 900px) {
+		#container {
+			display: flex;
+			flex-direction: column;
+		}
+
+		.button_nav {
+			visibility: hidden;
+		}
+
+		#header {
+			display: flex;
+			flex-direction: column;
+		}
+
+		.vid_header {
+			background-image: none;
+
+			video {
+				width: 100%;
+			}
+		}
+
+		.content_header {
+			a {
+				margin-left: 80px;
+			}
 		}
 	}
-	.content_header {
-		a {
-			margin-left: 80px;
-		}
-	}
-}
 }
